# img-generator

./: CMakeLists.txt  README.md  config.json
include/: Configurator.h  ImgGenerator.h  SaveImageCallback.h
src/: Configurator.cpp  ImgGenerator.cpp  SaveImageCallback.cpp  generator.cpp
